maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: value === is not a member of plm.universe.Direction
  if (getDirection()===Direction.NORD ) {
                    ^